tests/invalid/object_inherits_component.wio
component Position {
    x: i32 = 0;
}

@From(Position)
object BadActor {
}

fn Entry(args: string[]) -> i32 {
    return 0;
}
